style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  background-color: hsl(216, 12%, 8%);
}

.overpass-bold {
  font-family: "Overpass", sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

.overpass-regular {
  font-family: "Overpass", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.main-div h1 {
  color: white;
  text-align: start;
}

.main-div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  gap: 1rem;
  color: hsl(217, 12%, 63%);
}

.main-div p {
  line-height: 1.5;
}

.main-square {
  background-color: hsl(213, 19%, 18%);
  width: 25rem;
  height: 22rem;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-radius: 5%;
  gap: 20%;
}

.main-div,
.result {
  transition: opacity 0.4s ease;
}

.result {
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 1rem;
}

.result h1 {
  color: white;
}

.result > :last-child {
  color: hsl(217, 12%, 63%);
  line-height: 1.5;
}

.result :nth-child(2) {
  color: hsl(25, 97%, 53%);
  padding: 10px 20px;
  border-radius: 9999px; /* large enough value makes edges fully rounded */
  background-color: hsl(215, 11%, 21%);
}

.numbers {
  display: flex;
  flex-direction: row;
  justify-content: start; /* Aligns with h1 and p */
  align-items: center;
  gap: 1rem; /* smaller, consistent spacing between numbers */
}

.numbers span {
  width: 2.5rem;
  height: 2.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background-color: hsl(216, 12%, 8%);
  color: hsl(217, 12%, 63%);
  cursor: pointer;
  transition: background-color 0.3s, color 0.3s;
}

.numbers span:hover {
  background-color: hsl(25, 97%, 53%);
  color: white;
}

.numbers span:active {
  background-color: white;
  color: black;
}

.attribution {
  color: white;
}

.star {
  width: 2.5rem;
  height: 2.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background-color: hsl(216, 12%, 8%);
  color: hsl(217, 12%, 63%);
  transition: background-color 0.3s, color 0.3s;
}

button {
  width: 100%;
  padding: 10px 20px;
  border-radius: 9999px; /* large enough value makes edges fully rounded */
  background-color: hsl(25, 97%, 53%);
  transition: background-color 0.3s, color 0.3s;
}

button:hover {
  background-color: white;
  cursor: pointer;
  /* color: white; */
}
span {
  display: inline-block;
  padding: 10px 20px;

  cursor: pointer;
  background-color: hsl(216, 12%, 8%);
  color: hsl(217, 12%, 63%);
  border-radius: 8px;
  transition: background-color 0.3s, color 0.3s;
}

/* Hover effect for all spans */
span:hover {
  background-color: hsl(25, 97%, 53%);
  color: white;
}

/* Active class for clicked span */
span.active {
  background-color: white !important;
  color: black !important;
}

button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.attribution {
  text-align: center;
}

@media (max-width: 1440px) {
}

@media (max-width: 1024px) {
}

@media (max-width: 600px) {
  .main-square {
    width: 85vw;
  }

  h1 {
    font-size: 2rem;
  }

  p {
    font-size: 1rem;
  }
}

